fixed overflow x on header

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
 
 .App {
   background-color: var(--color-white);
+  overflow-x: hidden;
 }
 
 @media (prefers-reduced-motion: no-preference) {
