--- a/src/Header.module.css
+++ b/src/Header.module.css
@@ -30,12 +30,12 @@
   line-height: var(--font-large-line-height);
   text-decoration: none;
   color: var(--delightful-neutral);
-  padding: 1rem 0.6rem 0;
+  padding: 1rem 4rem 0;
 }
 .icon {
   color: var(--delightful-bright);
   font-size: x-large;
-  margin: 0.7em 0.8em 0;;
+  margin: 0.7em 1.5vw 0;;
 }
 .contactBtn:hover,
 .icon:hover {
