--- a/src/components/Services.module.css
+++ b/src/components/Services.module.css
@@ -14,40 +14,25 @@
   display: flex;
   flex-direction: row;
   max-width: 100%;
-  @media (--media-max-medium) {
-    flex-direction: column;
-  }
 }
 
 #imageDivServices,
 #wordsDivServices {
   padding: 1em;
-  @media (--media-max-medium) {
-    padding: 0;
-  }
 }
 
 #imageDivServices {
   flex-basis: 25%;
   align-self: flex-start;
   box-sizing: border-box;
-  @media (--media-max-medium) {
-    width: 60%;
-    margin: 0 20%;
-  }
 }
 #wordsDivServices {
   flex-basis: 70%;
   box-sizing: border-box;
-
 }
 .imgServices {
   width: 100%;
   padding-top: 2em;
-  @media (--media-max-medium) {
-    width: 60%;
-    margin: 0 20%;
-  }
 }
 
 .h2Wrapper {
@@ -58,4 +43,22 @@
   color: var(--delightful-neutral);
   font-style: italic;
   font-family: "Courgette", cursive;
+}
+
+@media screen and (max-width: 767px) {
+  .flexWrapperServices {
+    flex-direction: column-reverse;
+  }
+  #imageDivServices,
+  #wordsDivServices {
+    padding: 0;
+  }
+  #imageDivServices {
+    width: 60%;
+    margin: 0 20%;
+  }
+  .imgServices {
+    width: 60%;
+    margin: 0 20%;
+  }
 }
